<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:orientation="horizontal" android:weightSum="1.0" >
        <Button android:id="@+id/buttonOn"  android:layout_width="0dp" android:layout_weight=".50" android:layout_height="wrap_content" android:text="@string/on"/>
        <Button android:id="@+id/buttonOff" android:layout_width="0dp" android:layout_weight=".50" android:layout_height="wrap_content" android:text="@string/off"/>
    </LinearLayout>
        
   <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:orientation="horizontal" android:weightSum="1.0" >
   		<Button android:id="@+id/buttonDesc" 	android:layout_width="0dp" android:layout_weight=".50" android:layout_height="wrap_content" android:text="@string/makeDiscoverable"/>
   		<Button android:id="@+id/buttonSearch" 	android:layout_width="0dp" android:layout_weight=".50" android:layout_height="wrap_content" android:text="@string/searchDevice"/>
   </LinearLayout>

   <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:orientation="vertical" android:weightSum="1.0" >
   		<TextView android:id="@+id/textView1" 			android:layout_width="match_parent" android:layout_height="0dp" android:layout_weight=".05" android:text="@string/listDevicePaired" />
   		<ListView android:id="@+id/listViewPaired"		android:layout_width="match_parent" android:layout_height="0dp" android:layout_weight=".45" android:scrollbars="vertical" ></ListView>
   		<TextView android:id="@+id/textView2" 			android:layout_width="match_parent" android:layout_height="0dp" android:layout_weight=".05" android:text="@string/listDeviceSearch" />
		<ListView android:id="@+id/listViewDetected" 	android:layout_width="match_parent"	android:layout_height="0dp" android:layout_weight=".45" android:scrollbars="vertical" ></ListView> 
   </LinearLayout>
   
</LinearLayout>